# collageradiomics

./: .bash_history  .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  Pipfile  README.md  collageradiomics_cli.py  requirements.txt  setup.py  start.sh
.github/workflows/: python-publish.yml
baseline/: README.md
baseline/matlab/: ComputeV.m  collage_get_range.m  compare_haralick_outputs.m  compute_CoLlAGe2D.m  compute_CoLlAGe3D.m  dummy_400.m  find_orientation_CoLlAGe_2D.m  find_orientation_CoLlAGe_3D.m  haralick2mex.cpp  haralick2mex.mex  rescale_range.m  save_random_haralick.m  test_haralick.m
cli/: README.md  collageradiomics_cli.py  collageradiomicscli.py  collageradiomicscli.spec  runPyInstaller.py  setup.py
cli_batch/: collageradiomicsclibatch.py  setup.py
docker/dev_environment/collageradiomics_examples/: Dockerfile
docker/dev_environment/collageradiomics_jupyter/: Dockerfile
docker/dev_environment/collageradiomics_pip/: Dockerfile
docker/dev_environment/ml_base/: Dockerfile
docker/dev_environment/ubuntu_base/: Dockerfile
examples/: isbi.py
jupyter/: CoLlage-compare.ipynb  CoLlage.ipynb  development.ipynb
jupyter/examples/: 0 - Non Rectangular Mask Example.ipynb  1 - Rectangular Window Example.ipynb  2 - Multiple Images Example.ipynb  3 - Single Feature Example.ipynb  example.ipynb  multiple-images-example.ipynb  non-rectangular-mask-example.ipynb  rectangular-window-example.ipynb
module/: .gitignore  LICENSE  README.md  collageradiomics.py  requirements.txt  setup.py  setup.sh  test.dcm  test_script.py
module/collageradiomics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
module/docs/: requirements.txt
module/docs/source/: conf.py  index.rst
slicer/collageradiomics/: CMakeLists.txt  README.md
slicer/collageradiomics/CollageRadiomicsSlicer/: CMakeLists.txt  CollageRadiomicsSlicer.py
slicer/collageradiomics/CollageRadiomicsSlicer/Resources/UI/: CollageRadiomicsSlicer.ui
